menu principal finalizado

--- a/index.html
+++ b/index.html
@@ -32,5 +32,26 @@
     </div>
   </header>
 
+  <section class="container destaques">
+    <div class="destaques-textos">
+      <h1>Refúgio de Luxo Granja Viana</h1>
+      <div class="destaques-buttons">
+        <button><i class="fa-solid fa-arrow-up-from-bracket"></i>Compartilhar</button>
+        <button><i class="fa-regular fa-heart"></i>Salvar</button>
+      </div>
+    </div>
+    <div class="galeria-grid">
+      <img class="grid-col-span-2 fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/2f02dd5f-f80c-4271-8898-476a66ed32c0.jpeg?im_w=1200" alt="">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/4a432910-7703-4985-8440-ddffd39076e2.jpeg?im_w=720" alt="">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/1bc17505-cf1e-4288-9c84-acc263054eb9.jpeg?im_w=720" alt="">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/679676e6-1b0b-49d0-9cc1-2657bda55389.jpeg?im_w=720" alt="">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/720d3f1a-816d-44c9-83cd-5e8e2d2f6e36.jpeg?im_w=720" alt="">
+    </div>
+    <div class="show-fotos">
+      <button><img src="./assents/svg/dot-grid-fill.svg" alt="">Mostrar todas as fotos</button>
+    </div>
+  </section>
+
+  
 </body>
 </html>
