ajuste no aside e comeco da parte de informacoes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,48 @@
     </div>
   </section>
 
-  
+  <div class="container informacoes-e-aside" style="border: 1px solid red;">
+    <section class="informacoes-imovel">
+      <div class="informacoes-gerais">
+        <h2>Espaço inteiro: casa em Cotia, Brasil</h2>
+        <h5>12 hóspedes · 4 quartos · 7 camas · 3,5 banheiros</h5>
+        <h3>Novidade · <h3><u>1 comentário</u></h3>
+      </div>
+    </section>
+
+    <aside class="container reserva-noites">
+      <div class="valor-diaria">
+        <h1><u>R$12.401</u></h1>
+        <h5>por 5 noites</h5>
+      </div>
+      <div class="reserva-selecao-dias">
+        <div class="inputs check-in">
+          <label for="checkin">CHECK-IN</label>
+          <input type="text" id="checkin" placeholder="dd/mm/aaaa">
+        </div>
+
+        <div class="inputs reserva-checkout">
+          <label for="checkout">CHECK-OUT</label>
+          <input type="text" id="checkout" placeholder="dd/mm/aaaa">
+        </div>
+
+        <div class="inputs reserva-hospedes">
+          <label for="hospedes">HÓSPEDES</label>
+          <select name="hospedes" id="hospedes">
+            <option value="hospede">1 hospede</option>
+            <option value="adulto">Adulto</option>
+            <option value="crianca">Criança</option>
+            <option value="bebe">Bebê</option>
+            <option value="animal">Animal de estimação</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="reserva-confirmar">
+        <a href="https://www.airbnb.com.br/book/stays/1477900428114463073?numberOfAdults=1&checkin=2025-09-06&checkout=2025-09-11&numberOfChildren=0&numberOfInfants=0&numberOfPets=0&guestCurrency=BRL&productId=1477900428114463073&isWorkTrip=false&numberOfGuests=1&numberOfInstallments=1">Reservar</a>
+        <h5>Você ainda não será cobrado</h5>
+      </div>
+    </aside>
+  </div>
 </body>
 </html>
