termino do aside e conversao px em rem

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="hero-cabecalho-buttons">
       <button>Torne-se um anfitrião</button>
       <div class="cabecalho-buttons-round">
-        <button class="button-round-gray"><div class="globe"><i class="fa-regular fa-globe"></i></div></button>
+        <button class="globe button-round-gray"><img src="./assents/img/globo.png" alt="icon de globo"></button>
         <button class="button-round-gray"><i class="fa-solid fa-bars"></i></button>
       </div>
     </div>
@@ -43,14 +43,14 @@
       </div>
     </div>
     <div class="galeria-grid">
-      <img class="grid-col-span-2 fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/2f02dd5f-f80c-4271-8898-476a66ed32c0.jpeg?im_w=1200" alt="">
-      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/4a432910-7703-4985-8440-ddffd39076e2.jpeg?im_w=720" alt="">
-      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/1bc17505-cf1e-4288-9c84-acc263054eb9.jpeg?im_w=720" alt="">
-      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/679676e6-1b0b-49d0-9cc1-2657bda55389.jpeg?im_w=720" alt="">
-      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/720d3f1a-816d-44c9-83cd-5e8e2d2f6e36.jpeg?im_w=720" alt="">
+      <img class="grid-col-span-2 fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/2f02dd5f-f80c-4271-8898-476a66ed32c0.jpeg?im_w=1200" alt="foto da fachada externa da casa">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/4a432910-7703-4985-8440-ddffd39076e2.jpeg?im_w=720" alt="foto da sala interna da casa">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/1bc17505-cf1e-4288-9c84-acc263054eb9.jpeg?im_w=720" alt="foto de um dos quartos da casa">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/679676e6-1b0b-49d0-9cc1-2657bda55389.jpeg?im_w=720" alt="foto da cozinha integrada com sala de jantar e area externa">
+      <img class="fotos-casa" src="https://a0.muscache.com/im/pictures/hosting/Hosting-1477900428114463073/original/720d3f1a-816d-44c9-83cd-5e8e2d2f6e36.jpeg?im_w=720" alt="foto da area externa">
     </div>
     <div class="show-fotos">
-      <button><img src="./assents/svg/dot-grid-fill.svg" alt="">Mostrar todas as fotos</button>
+      <button><img src="./assents/svg/dot-grid-fill.svg" alt="menu em pontos">Mostrar todas as fotos</button>
     </div>
   </section>
 
@@ -195,7 +195,9 @@
               <option value="crianca">Criança</option>
               <option value="bebe">Bebê</option>
               <option value="animal">Animal de estimação</option>
+        
             </select>
+            
           </div>
         </div>
 
