Adicionado à seção termos e regras

--- a/index.html
+++ b/index.html
@@ -246,5 +246,33 @@
           </div>
         </div>
       </section>
+      <section class="container info-hospedagem">
+        <div class="divorizontal"></div>
+        <h2>O que você deve saber</h2>
+        <div class="info-hospedagem-grid">
+          <div class="info-card">
+            <h4>Regras da casa</h4>
+            <h5>Check-in após 15:00</h5>
+            <h5>Checkout antes das 11:00</h5>
+            <h5>Máximo de 12 hóspedes</h5>
+            <h3 class="mostrar-mais"><u>Mostrar mais</u> ></h3>
+          </div>
+          <div class="info-card">
+              <h4>Segurança e propriedade</h4>
+              <h5>Alarme de monóxido de carbono não informado</h5>
+              <h5>Detector de fumaça não informado</h5>
+              <h3 class="mostrar-mais"><u>Mostrar mais</u> ></h3>
+            </div>
+            <div class="info-card">
+              <h4>Política de cancelamento</h4>
+              <h5>reembolso parcial: receba o valor de todas as
+                noites restantes 24 horas após o cancelamento.
+                Sem Reembolso da taxa de serviço ou das noites em que passou na acomodação.
+              </h5>
+              <h5>Consulte a política completa deste anfitrião para saber mais</h5>
+              <h3 class="mostrar-mais"><u>Mostrar mais</u> ></h3>
+              </div>
+        </div>
+      </section>
 </body>
 </html>
