adicionado seção  de suporte e empresa no rodapé

--- a/index.html
+++ b/index.html
@@ -274,5 +274,43 @@
               </div>
         </div>
       </section>
+      <footer class="footer">
+        <div class="divorizontal"></div>
+        <div class="container">
+          <h5>Airbnb&nbsp;&nbsp; >&nbsp;&nbsp;Brasil&nbsp;&nbsp; >&nbsp;&nbsp; Região Sudeste do Brasil</h5>
+        </div>
+        <div class="info-hospedagem-grid">
+          <div class="info-card">
+            <h4>Atendimento</h4>
+            <h5>Central de ajuda</h5>
+            <h5>Receber ajuda com problema de segurança</h5>
+            <h5>AirCover</h5>
+            <h5>Antidistriminação</h5>
+            <h5>Apoio à pessoa com deficiência</h5>
+            <h5>Opções de cancelamento</h5>
+            <h5>Reporte um problema</h5>
+          </div>
+          <div class="info-card">
+            <h4>Hospedagem</h4>
+            <h5>Anuncie seu espaço no Airbnb</h5>
+            <h5>Anuncie sua experiência no Airbnb</h5>
+            <h5>Anuncie seu serviço no Airbnb</h5>
+            <h5>AirCover para anfitriões</h5>
+            <h5>Recursos para anfitriões</h5>
+            <h5>Fórum da comunidade</h5>
+            <h5>Hospedagem responsável</h5>
+            <h5>Participe de uma aula gratuita de hospedagem</h5>
+            <h5>Encontre um coanfitrião</h5>
+          </div>
+          <div class="info-card">
+            <h4>Airbnb</h4>
+            <h5>Airbnb 2025 - edição de maio</h5>
+            <h5>Newsroom</h5>
+            <h5>Carreiras</h5>
+            <h5>Investidores</h5>
+            <h5>Locais emergenciais Airbnb.org</h5>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
