--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
               <h4>★★★★★</h4>
               <p class="avaliacao-texto">·&nbsp;&nbsp;1 dia atrás&nbsp;&nbsp;·&nbsp;&nbsp;Ficou algumas noites</p>
             </div>
-            <h5 class="comentarios-texto">Melhor casa da região! Muito linda e aconchegante! Ambiente luxuoso muito limpo, 
-              e sem falar no cuidado da Mariana em sempre estar proativa para responder! Voltarei mais vezes...</h5>
+            <com class="comentarios-texto">Melhor casa da região! Muito linda e aconchegante! Ambiente luxuoso muito limpo, 
+              e sem falar no cuidado da Mariana em sempre estar proativa para responder! Voltarei...</com>
               <h3 class="mostrar-mais"><u>Mostrar mais</u></h3>
           </div>
           <div class="comentario-card">
@@ -241,8 +241,9 @@
               <h4>★★★★★</h4>
               <p class="avaliacao-texto">·&nbsp;&nbsp;2 semanas atrás&nbsp;&nbsp;·&nbsp;&nbsp;Ficou uma noite</p>
             </div>
-            <h5 class="comentarios-texto">A casa é ainda mais linda pessoalmente. Usamos para fazer um ensaio de fotos e o espaço é amplo, 
-              claro e muito confortável!</h5>
+            <cam class="comentarios-texto">A casa é ainda mais linda pessoalmente. 
+              Usamos para fazer um ensaio de fotos e o espaço é amplo, 
+              claro e muito confortável!</cam>
           </div>
         </div>
       </section>
